<resources>
    <string name="app_name">Master Senha</string>


    <!-- Textos Preferências (SharedPreference) -->
    <string name="pref_config">PREF_CONFIGURACAO</string>
    <string name="pref_config_numero_casas">numeroCasas</string>
    <string name="pref_config_numeros_distintos">numerosDistintos</string>
    <string name="pref_config_dificuldade">dificuldade</string>
    <string name="pref_config_exibe_regras_jogo">exibeRegrasJogo</string>


    <!-- Main Activity -->
    <string name="txt_vitoria">VOCÊ GANHOU!!</string>
    <string name="txt_derrota">VOCÊ PERDEU!!</string>
    <string name="txt_clique_novo_jogo">Clique em Novo Jogo</string>
    <string name="txt_infomar_todos_digitos_teste">Você precisa informar todos os números para realizar o teste da senha</string>
    <string name="txt_frase_efeito1">Tente descobrir a senha secreta.</string>
    <string name="txt_frase_efeito2">Não desista, você consegue. Força!</string>
    <string name="txt_frase_efeito3">Você está mais perto do que imagina!</string>
    <string name="txt_frase_efeito4">Última tentativa, pense bem.</string>

    <string name="btn_novo_jogo">Novo Jogo</string>
    <string name="btn_testar_senha">Testar Senha</string>

    <string name="txt_tentativa">Tentativa</string>
    <string name="txt_historico_tentativa">Histórico de tentativas</string>
    <string name="txt_0">0</string>
    <string name="txt_1">1</string>
    <string name="txt_2">2</string>
    <string name="txt_3">3</string>
    <string name="txt_4">4</string>
    <string name="txt_5">5</string>
    <string name="txt_6">6</string>
    <string name="txt_7">7</string>
    <string name="txt_8">8</string>
    <string name="txt_9">9</string>
    <string name="txt_10">10</string>

    <!-- Mensagens de avisos, erros e auxiliares -->
    <string name="toast_aviso_configuracoes">Você deve encerrar o jogo atual para alterar as configurações</string>
    <string name="toast_aviso_informacoes">Você deve encerrar o jogo atual para visualizar as informações</string>
    <string name="msg_tentativa_texto_formatado">Não conseguimos informar o palpite formatado</string>
    <string name="dialog_titulo_encerrar_jogo">Encerrar jogo</string>
    <string name="dialog_mensagem_encerrar_jogo">
        Deseja realmente sair do jogo atual?\n
        Ao encerrar o jogo atual, o sistema contará como desistência, portanto contabilizará como derrota.
    </string>
    <string name="dialog_sim">Sim</string>
    <string name="dialog_nao">Não</string>
    <string name="dialog_fechar">Fechar</string>
    <string name="dialog_nao_mostrar_novamente">Não mostrar novamente</string>
    <string name="dialog_dificuldade_atual">Dificuldade atual:</string>

    <!-- Textos Content Description -->
    <string name="content_txt_tentativa">Campo com o dígito para tentativa de senha</string>
    <string name="content_btn_reset">Botão para resetar o jogo</string>

    <!-- Textos MENU -->
    <string name="menu_configuracoes">Configurações</string>
    <string name="menu_informacoes">Informações</string>
    <string name="menu_ajuda">Ajuda</string>



    <!-- Configurações Activity -->
    <string name="radiobutton_4numeros">4 Números</string>
    <string name="radiobutton_5numeros">5 Números</string>
    <string name="radiobutton_facil">Fácil</string>
    <string name="radiobutton_dificil">Difícil</string>
    <string name="switch_numeros_distintos">Números Distintos</string>

    <string name="txt_configuracoes">Configurações</string>
    <string name="txt_config_quantos_numeros">Quantos números terá a senha?</string>
    <string name="txt_config_dificuldade">Dificuldade</string>

    <string name="txt_config_regras_jogo">Regras do Jogo</string>
    <string name="txt_config_objetivo_jogo">OBJETIVO - Descobrir a senha secreta.</string>
    <string name="txt_config_regras_jogo_padrao">
        A senha é uma sequência de 4 ou 5 números, distintos ou não.\n
        A cada novo jogo a senha é alterada, de forma randômica.\n
        Após cada palpite, você receberá dicas para te auxiliar. A dica muda conforme a dificuldade escolhida.\n\n
        Boa sorte e divirta-se!</string>
    <string name="txt_config_regras_jogo_facil">
        Exemplo da dica para nível fácil\n\n
        Tentativa 1\n
        7 - 2 - 1 - 6\n\n
        2 -> Número correto, mas posição errada.\n
        6 -> Número e posição corretos.
    </string>
    <string name="txt_config_regras_jogo_dificil">
        Exemplo da dica para nível difícil\n\n
        Tentativa 1\n
        7 - 3 - 9 - 6 --- 2 | 1\n\n
        2 -> Possui 2 números corretos na posição correta.\n
        1 -> Possui 1 números corretos na posição errada.\n
    </string>



    <!-- Informações Activity -->
    <string name="txt_sobre">Sobre</string>
    <string name="txt_sobre_versao">Versão: 1.0</string>
    <string name="txt_sobre_informacoes">App baseado no clássico jogo Mastermind.</string>
    <string name="txt_sobre_desenvolvedor">Desenvolvido por Fernando Leichtweis</string>
    <string name="btn_sobre_avaliar">Avaliar APP</string>
    <string name="btn_sobre_feedback">Feedback</string>

    <string name="txt_estatisticas">Estatísticas</string>
    <string name="txt_estatisticas_total_partidas">Total de partidas:</string>
    <string name="txt_estatisticas_total_vitorias">Total de vitórias:</string>
    <string name="txt_estatisticas_total_derrotas">Total de derrotas:</string>
    <string name="txt_estatisticas_vitorias">Vitórias</string>
    <string name="txt_estatisticas_derrotas">Derrotas</string>
    <string name="txt_estatisticas_facil">Fácil</string>
    <string name="txt_estatisticas_dificil">Difícil</string>
    <string name="txt_estatisticas_4_distintos">4 números distintos:</string>
    <string name="txt_estatisticas_4_nao_distintos">4 números não distintos:</string>
    <string name="txt_estatisticas_5_distintos">5 números distintos:</string>
    <string name="txt_estatisticas_5_nao_distintos">5 números não distintos:</string>

</resources>