<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_informacoes"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/menu_informacoes"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_configuracoes"
        android:icon="@drawable/ic_baseline_settings_24"
        android:orderInCategory="2"
        android:title="@string/menu_configuracoes"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_ajuda"
        android:icon="@drawable/ic_baseline_help_24"
        android:orderInCategory="3"
        android:title="@string/menu_ajuda"
        app:showAsAction="ifRoom" />

</menu>